src/proto/checkable.css
@import "./base.css";

.default
{
    padding-top:        5px;
    padding-bottom:     5px;

    width:              auto;

    &:last-child
    {
        margin-bottom:  0;
    }

    &:hover .label
    {
        cursor:         pointer;
    }
}

.fakeHovered
{
    .label::before,
    .input:focus + .label::before
    {
        border:         2px solid var( --PC-BLUE );
    }
}

.label
{
    display:            flex;
    align-items:        center;

    position:           relative;
    height:             var( --spacing-3 );

    &::before
    {
        content:            '';

        display:            inline-block;
        vertical-align:     middle;

        position:           relative;

        box-sizing:         border-box;
        width:              24px;
        height:             24px;

        border:             1px solid var( --PC-BLUE--L55 );
        border-radius:      2px;

        background:         var( --PC-WHITE );
    }

    &::after
    {
        content:            '';
        display:            none;
        background-size:    100%;
        background-repeat:  no-repeat;
    }

    & > :first-child
    {
        display:        inline-block;
        vertical-align: middle;
        margin-left:    var( --spacing-1 );
    }
}

.labelText
{
    @extend             %Nessie-SemiBold;
    color:              var( --PC-GREY--D15 );
}

.error
{
    .label::before,
    &:hover .label::before,
    .input:focus + .label::before
    {
        border:       1px solid var( --PC-RED );
    }
}

.disabled
{
    cursor:                 default;

    .label,
    .label:hover
    {
        cursor:             default;
    }

    .label::before,
    &:hover .label::before,
    .input:focus + .label::before
    {
        cursor:             default;
    }

    .labelText
    {
        color:  var( --PC-GREY--L70 );
    }
}

.input
{
    position:               absolute;
    left:                   -9999px;

    &:checked + .label::after
    {
        position:           absolute;
    }

    &:focus + .label::before
    {
        border:             2px solid var( --PC-BLUE );
    }
}

